Update build process

--- a/RethinkDB.Demo.App/index.html
+++ b/RethinkDB.Demo.App/index.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <title>Hello React!</title>
-    <script src="bower_components/react/react.js"></script>
     <link rel="stylesheet" href="styles/base.css" />
-    <!-- No need for JSXTransformer! -->
   </head>
   <body>
     <div id="example"></div>
-    <script src="app/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
