Material UI + React + FunScript

--- a/RethinkDB.Demo.App/index.html
+++ b/RethinkDB.Demo.App/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Hello React!</title>
     <link rel="stylesheet" href="styles/base.css" />
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+    <!-- <script src="bower_components/react/react.js"></script> -->
   </head>
   <body>
     <div id="example"></div>
