--- a/RethinkDB.Demo.App/index.html
+++ b/RethinkDB.Demo.App/index.html
@@ -4,7 +4,8 @@
     <title>Hello React!</title>
     <link rel="stylesheet" href="styles/base.css" />
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-    <!-- <script src="bower_components/react/react.js"></script> -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/signalr/jquery.signalR.js"></script>
   </head>
   <body>
     <div id="example"></div>
