Make SignalR working

--- a/RethinkDB.Demo.App/index.html
+++ b/RethinkDB.Demo.App/index.html
@@ -6,6 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/signalr/jquery.signalR.js"></script>
+    <script src="signalR/hubs"></script>
   </head>
   <body>
     <div id="example"></div>
